src/test/ui/parser/issue-5544-a.stderr
error: integer literal is too large
  --> $DIR/issue-5544-a.rs:2:19
   |
LL |     let __isize = 340282366920938463463374607431768211456; // 2^128
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

